Alteração de organização de libs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/a.exe",
-        "args": [],
+        "args": ["imagens\\borboleta.bmp", "imagens\\testeMedianaRGB2.bmp", "5"],
         "stopAtEntry": false,
         "cwd": "${fileDirname}",
         "environment": [],
